# BNS-Botnet

./: Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: rust.yml
bns-c2c/: Cargo.toml
bns-client/: Cargo.toml
bns-client/src/: bot.rs  main.rs
bns-dropper/: Cargo.toml
bns-dropper/src/: main.rs
bns-lib/: Cargo.toml
bns-lib/src/: commands.rs  encryption.rs  lib.rs  session.rs
bns-lib/src/bot/: mod.rs  state.rs
bns-lib/src/command/: mod.rs
bns-payload/: Cargo.toml
bns-payload-uploader/: Cargo.toml
bns-payload-uploader/src/: main.rs  response.rs
bns-payload/src/: main.rs
payload/: python_script.py  test.txt
