[package]
name = "bns-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { workspace = true }
tokio = { workspace = true }
bns-lib = { path = "../bns-lib" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
