[package]
name = "bns-dropper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
tempfile = "3"

[[bin]]
name = "bns-dropper"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
