[package]
name = "bns-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { workspace = true }
base64 = "0.22.1"
reqwest = { version = "0.12.14", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
tempfile = "3"
aes-gcm = "0.10.3"
sysinfo = "0.33.1"
