[package]
name = "bns-payload-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { workspace = true }
tokio = { workspace = true }
bns-lib = { path = "../bns-lib" }
reqwest = { version = "0.12.14", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
bytes = "1.10.1"
serde = "1.0.219"
